--- a/Services/ProductService/ProductService.csproj
+++ b/Services/ProductService/ProductService.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="AutoMapper" Version="14.0.0" />
         <PackageReference Include="FluentValidation" Version="12.0.0" />
         <PackageReference Include="Lombok.NET" Version="2.4.1" />
+        <PackageReference Include="MediatR" Version="12.5.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0"/>
         <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
     </ItemGroup>
