--- a/Services/ProductService/ProductService.csproj
+++ b/Services/ProductService/ProductService.csproj
@@ -13,7 +13,13 @@
         <PackageReference Include="Lombok.NET" Version="2.4.1" />
         <PackageReference Include="MediatR" Version="12.5.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
         <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
+        <PackageReference Include="OpenTelemetry" Version="1.12.0" />
+        <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0" />
+        <PackageReference Include="Serilog" Version="4.3.1-dev-02373" />
+        <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.1-dev-02307" />
+        <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="10.0.0" />
     </ItemGroup>
 
     <ItemGroup>
