Update - Adding localization and pluralization

--- a/Services/ProductService/ProductService.csproj
+++ b/Services/ProductService/ProductService.csproj
@@ -41,4 +41,19 @@
       <Folder Include="Tests\UnitTests\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <EmbeddedResource Update="Resources\SharedResources.en-US.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>SharedResourcesen-US.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Resources\SharedResources.en-US.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>SharedResources.en-US.resx</DependentUpon>
+      </Compile>
+    </ItemGroup>
+
 </Project>
