--- a/Services/ProductService/ProductService.csproj
+++ b/Services/ProductService/ProductService.csproj
@@ -30,6 +30,7 @@
 
     <ItemGroup>
       <Folder Include="API\Controllers\" />
+      <Folder Include="Application\Features\Products\Queries\" />
       <Folder Include="Application\Interfaces\" />
       <Folder Include="Application\Services\" />
       <Folder Include="Contract\" />
