--- a/Services/ProductService/API/appsettings.json
+++ b/Services/ProductService/API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SawaMarketDBSettings": {
+    "ConnectionString": "mongodb+srv://wejigiw347:yCevcLyicTCjlRw4@sawamarketcluster.ttbdtwy.mongodb.net/?retryWrites=true&w=majority&appName=SawaMarketCluster",
+    "DatabaseName": "sawa_market"
+  }
 }
